src/styles/components/_modal.scss
@use "../variables" as *;

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  display: flex;
  justify-content: center;
  align-items: flex-start;
  z-index: 1000;
  padding: 3rem;
  backdrop-filter: blur(5px);

  @media (max-width: 768px) {
    padding: 0;
  }
}

.modal-content {
  background-color: $surface-color;
  border-radius: 1rem;
  corner-shape: squircle;
  width: 100%;
  max-width: 800px;
  height: 100%;
  display: flex;
  flex-direction: column;
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
  animation: modal-in 0.3s ease-out;
  position: relative;

  @media (max-width: 768px) {
    max-height: 100dvh;
    border-radius: 0;
  }

  .modal-close-btn {
    position: absolute;
    right: 0.5rem;
    top: 0.7rem;
    background-color: $surface-color;
    border-radius: 0.5rem;
    border: none;
    color: $text-secondary;
    font-size: 2rem;
    line-height: 0.5;
    cursor: pointer;
    transition: color 0.2s;
    padding: 1rem;
    padding-bottom: 1.3rem;

    @media (max-width: 1024px) {
      line-height: 0.95;
    }

    &:hover {
      color: $text-primary;
    }
  }

  .modal-body {
    overflow-y: auto;
    flex: 1;

    // Adjust table container within modal to not have double padding/margins
    .table-container {
      margin: 0;
      padding: 0;
      background: none;
      border: none;
      box-shadow: none;
    }
  }
}

@keyframes modal-in {
  from {
    opacity: 0;
    transform: translateY(20px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

